# kalkulator_umur

./: CMakeLists.txt  README.md  build
cmake/: mingw-w64-x86_64.cmake
libs/imgui/: CMakeLists.txt  download
src/: jetbrainsmono.cpp  main.cpp
src/app/: app.cpp  app.hpp
src/ui/: badge.hpp  ui.cpp  ui.hpp  window.cpp  window.hpp
